# adavanced_stock_pipeline

./: .Dockerignore  .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/: .env
airflow/dags/: bronze_hf_daily_dag.py  bronze_to_silver_dag.py  test.py  transformation_dag.py
airflow/dags/config/: tickers.csv
docker/: .env  Dockerfile  docker-bootstrap.sh  superset_config.py
extract/: extract.py
jupyter/: Dockerfile
notebooks/: Untitled.ipynb  Untitled1.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
postgres/: superset-init.sql
postgres/data/: postmaster.pid
postgres/data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres/data/base/16384/: 2619  pg_internal.init
postgres/data/base/16386/: 112  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13460  13460_fsm  13464  13465  13465_fsm  13465_vm  13470  13470_fsm  13470_vm  13474  13475  13475_fsm  13475_vm  13479  16395  16396  16398  16401  16403  16404  16409  16410  16412  16413  16414  16415  16421  (+345 more)
postgres/data/base/5/: 2619  pg_internal.init
postgres/data/global/: 1214  1232  1233  1260  1262  2671  2672  2676  2677  pg_control  pg_internal.init
postgres/data/pg_xact/: 0000
scripts/: upload_static.py
spark/: Dockerfile  spark-defaults.conf
spark/work/: bronze_to_silver.py  silver_to_gold.py
